--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "chalk": "^5.3.0",
-    "validator": "^10.8.0"
+    "validator": "^10.8.0",
+    "yargs": "^17.7.2"
   }
 }
