--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "chalk": "^5.3.0",
+    "fs": "^0.0.1-security",
     "validator": "^10.8.0",
     "yargs": "^17.7.2"
   }
